syntax = "proto3";

package AcFunDanmu.Im.Basic;

message FrontendInfo {
	string ip = 1;
	int32 port = 2;
}
