syntax = "proto3";

package AcFunDanmu.Im.Basic;

message I18nCopyWriting {
	string formatKey = 1;
	repeated string formatParam = 2;
}
