syntax = "proto3";

package AcFunDanmu.Im.Basic;

message LocaleMessage {
	string locale = 1;
	map<int32,string> errorMessage = 2;
}
