syntax = "proto3";

package AcFunDanmu.Im.Basic;

message SettingInfo {
	string locale = 1;
	sint32 timezone = 2;
}
