syntax = "proto3";

package AcFunDanmu.Im.Basic;

message SyncCookie {
	int64 syncOffset = 1;
}
