syntax = "proto3";

package AcFunDanmu;

message CommonNotifySignalViolationAlert {
	string violationContent = 1;
	string b = 2;
}
