syntax = "proto3";

package AcFunDanmu;

message CommonStateSignalAuthorResume {
    int64 a = 1;
}
