syntax = "proto3";

package AcFunDanmu;

message CommonStateSignalLiveState {
    int32 a = 1;
    int32 b = 2;
    string c = 3;
}
