syntax = "proto3";

package AcFunDanmu;

message CommonStateSignalNewApplyUser {
    int64 a = 1;
}
