syntax = "proto3";

package AcFunDanmu;

message CommonStateSignalShoppingCart {
    unknown a = 1;
    string b = 2;

    enum unknown {
        c = 0;
        d = 1;
        e = 2;
    }
}
