syntax = "proto3";

package AcFunDanmu;

message KwaiStateSignalEcommerceCart {
    unknown a = 1;

    enum unknown {
        b = 0;
        c = 1;
    }
}
