syntax = "proto3";

package AcFunDanmu;

import "ZtLivePkProto.proto";

message PkRoundInfo {
    int64 a = 1;
    int32 b = 2;
    int32 c = 3;
    int64 d = 4;
    ZtLivePkProto e = 5;
}
