syntax = "proto3";

package AcFunDanmu;

import "ImageCdnNode.proto";

message WidgetPictureInfo {
    ImageCdnNode a = 1;
    int32 b = 2;
    int32 c = 3;
}
