syntax = "proto3";

package AcFunDanmu;

enum ZtLiveStartPlaySourceTypeProto {
    ZtLiveStartPlaySourceTypeProtoA = 0;
    ZtLiveStartPlaySourceTypeProtoB = 1;
}
